# nasdaq-itch-orderbook

./: .gitignore  Cargo.toml  README.md
python/: visualize.py
src/: file_io.rs  main.rs  message_types.rs  orderbook.rs  parser.rs  utils.rs  websocket.rs
