[package]
name = "nasdaq-itch-orderbook"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
memmap2 = "0.9.5"
rustc-hash = { version = "2.1"}
mimalloc = { version = "0.1.46", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
# WebSocket dependencies
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.19.0"
futures-util = "0.3.31"
tungstenite = "0.19.0"
serde_json = "1.0.140"
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
opt-level = 3
